2011-06-28  Miloslav Trmač  <mitr@redhat.com>

	* usermount.c (format): Use GtkComboBoxText instead of deprecated
	gtk_combo_box_new_text() and gtk_combo_box_append_text().
	* configure.ac: Update minimum GTK+ version.

2011-03-31  Miloslav Trmač  <mitr@redhat.com>

	* NEWS: Fix a spectacular typo.

	* configure.ac: Release 1.107.
	* NEWS: Update.
	* po/*: Update.
	* po/LINGUAS: Update.

	* Makefile.am (all-local, $(srcdir)/po/usermode.pot): Remove, this
	breaks (make distcheck).

2011-03-13  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (converse_console): Check return value of
	get_pam_string_item ().
	(converse_pipe): Handle NULL from read_reply when all responses were
	received.
	* shvar.c (svWriteFile): Check return value of dup(), don't truncate
	the file if dup() fails.  (Note that this code is not used.)

2011-03-04  Miloslav Trmač  <mitr@redhat.com>

	* .tx/config: New file.
	* Makefile.am (all-local, $(srcdir)/po/usermode.pot): Keep the .pot file
	updated for Transifex.
	* po/usermode.pot: Add to prepare for Transifex.

2011-01-11  John Bradshaw <john@johnbradshaw.org>

	* userpasswd.1: Fix a typo.

2010-09-14  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.106.1.
	* NEWS: Update.

2010-08-26  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.106.
	* NEWS: Update.

2010-06-14  Miloslav Trmač  <mitr@redhat.com>

	* consolehelper.c (main)
	* userhelper-wrap.c (userhelper_run)
	* userhelper.c (converse_console, wrap): Use g_malloc*_n ().

2010-06-12  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Define PACKAGE_BUREPORT and PACKAGE_URL.

	* autogen.sh: Run aclocal with -Wall.

2010-05-30  Miloslav Trmač  <mitr@redhat.com>

	* userinfo.c (on_ok_clicked)
	* usermount.c (response_callback): Use gtk_widget_is_toplevel () instead
	of deprecated GTK_WIDGET_TOPLEVEL ().

2010-04-08  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.105.
	* NEWS: Update.

	* userhelper.h
	* userhelper.c